--- a/views/item.jade
+++ b/views/item.jade
@@ -25,7 +25,7 @@ block content
                 .col-md-5.col-12
                     h2= "Subscriptions: "
                 .col-md-2.col
-                    h2= locals.history[0].subscribes
+                    h2= locals.history[0].subscriptions
                 .col-md-2.col
                     h2= "#" + locals.history[0].subscriptionsRank + ""
                 .col-md-3.col
