--- a/views/layout.jade
+++ b/views/layout.jade
@@ -51,4 +51,4 @@ html(lang='en')
     script(src="/javascripts/lazyload.js")
     script(src="/javascripts/layout.js")
     script(src='/javascripts/analytics.js' async)
-    script $(function() {$('img.lazy').lazyload();
+    script $(function() {$('img.lazy').lazyload()});
