--- a/views/compare.jade
+++ b/views/compare.jade
@@ -9,14 +9,14 @@ mixin listItem(comp)
                 h1
                     i.fa.fa-download.fa-2(aria-hidden="true")
         .col-8.col-sm-2.margin-auto
-            p.margin-no-bottom= comp.history[0].subs
-            p.margin-no-top= "#" + comp.history[0].subsRank + " | " + comp.history[0].subsPercent + "%"
+            p.margin-no-bottom= comp.history[0].subscriptions
+            p.margin-no-top= "#" + comp.history[0].subscriptionsRank + " | " + comp.history[0].subscriptionsPercent + "%"
         .col-4.d-sm-none
                 h1
                     i.fa.fa-star.fa-2(aria-hidden="true")
         .col-8.col-sm-2.margin-auto
-            p.margin-no-bottom= comp.history[0].favs
-            p.margin-no-top= "#" + comp.history[0].favsRank + " | " + comp.history[0].favsPercent + "%"
+            p.margin-no-bottom= comp.history[0].favorites
+            p.margin-no-top= "#" + comp.history[0].favoritesRank + " | " + comp.history[0].favoritesPercent + "%"
         .col-4.d-sm-none
                 h1
                     i.fa.fa-comment.fa-2(aria-hidden="true")
@@ -58,20 +58,20 @@ block content
                     i.fa.fa-times.fa-2(aria-hidden="true")
     if (items.length > 0)
         each comp, index in items
-            if(index % 2 == 0) 
+            if (index % 2 == 0) 
                 li.list-group-item.bg-info.text-black
                     +listItem(comp)
             else
                 li.list-group-item.bg-success.text-black
                     +listItem(comp)
-            if(index == comps.length - 1)
+            if (index == items.length - 1)
                 li.list-group-item.text-black.bg-warning
                     .row
                         .col-md-6(style="margin:auto")
                             form(method='GET' action='/compare')
                                 div.form-group
                                     label(for='id') Add a Mod ID: 
-                                    each comp, idx in comps
+                                    each comp, idx in items
                                         - var currID = "id" + (idx + 1)
                                             input.form-control(name=currID type='text' value=comp.id hidden).text-center
                                     - var newID = "id" + (index + 2);
