--- a/views/chart.jade
+++ b/views/chart.jade
@@ -7,7 +7,7 @@ mixin listItem(comp)
             .col-sm-2.margin-auto.d-none.d-sm-block
                 img(data-src=comp.preview_url).img-fluid.lazy
             .col-6.margin-auto= comp.title + ' (' + comp.id + ')'
-            .col-2.margin-auto= comp.history[0][name] + (title === "Unsubscribes" ? '%' : '')
+            .col-2.margin-auto= comp.history[0][name] + (name === "unsubscribes" ? '%' : '')
 
 block content
     .row
